Subscriptions fix: shifting classes to body (#16542)
* shifting classes to body

* bringing amp-subscriptions styles on body

* fixing pingback in example

* Update renderer.js

* Update renderer.js

* fixing lint

--- a/css/amp.css
+++ b/css/amp.css
@@ -628,8 +628,8 @@ amp-iframe iframe {
  * until the complete rules are loaded as part of amp-subscriptions extension.
  * Notice that, the `[subscription-dialog]` elements are always hidden.
  */
-html:not(.i-amphtml-subs-ready) [subscriptions-section],
-html:not(.i-amphtml-subs-ready) [subscriptions-action],
+body:not(.i-amphtml-subs-ready) [subscriptions-section],
+body:not(.i-amphtml-subs-ready) [subscriptions-action],
 [subscriptions-dialog] {
   display: none !important;
 }
